Adding data cleaning file

--- a/Notebooks/01_data_cleaning.ipynb
+++ b/Notebooks/01_data_cleaning.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Required libraries\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "# Scikit-Learn models, metrics, preprocessing\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "#Filter and ignore warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +230,7 @@
        "4        (min) 30  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +252,7 @@
        "(45593, 20)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +335,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,6 +633,380 @@
    ],
    "source": [
     "df_train.describe(exclude=np.number).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['ID', 'Delivery_person_ID', 'Delivery_person_Age',\n",
+      "       'Delivery_person_Ratings', 'Restaurant_latitude',\n",
+      "       'Restaurant_longitude', 'Delivery_location_latitude',\n",
+      "       'Delivery_location_longitude', 'Order_Date', 'Time_Orderd',\n",
+      "       'Time_Order_picked', 'Weather_Conditions', 'Road_traffic_density',\n",
+      "       'Vehicle_condition', 'Type_of_order', 'Type_of_vehicle',\n",
+      "       'Multiple_Deliveries', 'Festival', 'City_Type', 'Time_taken(min)'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def updateColumnName(df_train):\n",
+    "    df_train.rename(columns={'Weatherconditions': 'Weather_Conditions','multiple_deliveries': 'Multiple_Deliveries', 'City':'City_Type'}, inplace=True)\n",
+    "\n",
+    "updateColumnName(df_train)\n",
+    "print(df_train.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract time and convert to int\n",
+    "df_train['Time_taken(min)'] = df_train['Time_taken(min)'].apply(lambda x: int(x.split(' ')[1].strip()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract Weather conditions\n",
+    "df_train['Weather_Conditions'] = df_train['Weather_Conditions'].apply(lambda x: x.split(' ')[1].strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract city code from Delivery person ID\n",
+    "df_train['City_Code'] = df_train['Delivery_person_ID'].str.split(\"RES\", expand=True)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Time_taken(min)</th>\n",
+       "      <th>Weather_Conditions</th>\n",
+       "      <th>Delivery_person_ID</th>\n",
+       "      <th>City_Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0x4607</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Sunny</td>\n",
+       "      <td>INDORES13DEL02</td>\n",
+       "      <td>INDO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0xb379</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Stormy</td>\n",
+       "      <td>BANGRES18DEL02</td>\n",
+       "      <td>BANG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0x5d6d</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Sandstorms</td>\n",
+       "      <td>BANGRES19DEL01</td>\n",
+       "      <td>BANG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0x7a6a</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Sunny</td>\n",
+       "      <td>COIMBRES13DEL02</td>\n",
+       "      <td>COIMB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0x70a2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Cloudy</td>\n",
+       "      <td>CHENRES12DEL01</td>\n",
+       "      <td>CHEN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID  Time_taken(min) Weather_Conditions Delivery_person_ID City_Code\n",
+       "0  0x4607                24              Sunny    INDORES13DEL02       INDO\n",
+       "1  0xb379                33             Stormy    BANGRES18DEL02       BANG\n",
+       "2  0x5d6d                26         Sandstorms    BANGRES19DEL01       BANG\n",
+       "3  0x7a6a                21              Sunny   COIMBRES13DEL02      COIMB\n",
+       "4  0x70a2                30             Cloudy    CHENRES12DEL01       CHEN"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train[['ID', 'Time_taken(min)', 'Weather_Conditions', 'Delivery_person_ID', 'City_Code']].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weather_Conditions : ['Sunny', 'Stormy', 'Sandstorms', 'Cloudy', 'Fog', 'Windy', 'NaN']\n",
+      "Road_traffic_density : ['High ', 'Jam ', 'Low ', 'Medium ', 'NaN ']\n",
+      "Vehicle_condition : [2, 0, 1, 3]\n",
+      "Type_of_order : ['Snack ', 'Drinks ', 'Buffet ', 'Meal ']\n",
+      "Type_of_vehicle : ['motorcycle ', 'scooter ', 'electric_scooter ', 'bicycle ']\n",
+      "Multiple_Deliveries : ['0', '1', '3', 'NaN ', '2']\n",
+      "Festival : ['No ', 'Yes ', 'NaN ']\n",
+      "City_Type : ['Urban ', 'Metropolitian ', 'Semi-Urban ', 'NaN ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unique values of some categorical columns of df\n",
+    "columns = ['Weather_Conditions', 'Road_traffic_density',\n",
+    "       'Vehicle_condition', 'Type_of_order', 'Type_of_vehicle',\n",
+    "      'Multiple_Deliveries', 'Festival', 'City_Type']\n",
+    "\n",
+    "for column in columns:\n",
+    "    unique_values = df_train[column].unique().tolist()\n",
+    "    print(column, \":\", unique_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.drop(['ID','Delivery_person_ID'],axis=1,inplace=True)\n",
+    "\n",
+    "df_train.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update datatypes\n",
+    "df_train['Delivery_person_Age'] = df_train['Delivery_person_Age'].astype('float64')\n",
+    "df_train['Delivery_person_Ratings'] = df_train['Delivery_person_Ratings'].astype('float64')\n",
+    "df_train['Multiple_Deliveries'] = df_train['Multiple_Deliveries'].astype('float64')\n",
+    "df_train['Order_Date']=pd.to_datetime(df_train['Order_Date'],format=\"%d-%m-%Y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting String 'NaN' to np.nan\n",
+    "# As some of the values have extra space after NaN, will use regex\n",
+    "df_train.replace('NaN', float(np.nan), regex=True,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Delivery_person_Ratings        1908\n",
+       "Delivery_person_Age            1854\n",
+       "Time_Orderd                    1731\n",
+       "City_Type                      1200\n",
+       "Multiple_Deliveries             993\n",
+       "Weather_Conditions              616\n",
+       "Road_traffic_density            601\n",
+       "Festival                        228\n",
+       "Restaurant_latitude               0\n",
+       "Order_Date                        0\n",
+       "Restaurant_longitude              0\n",
+       "Time_Order_picked                 0\n",
+       "Delivery_location_latitude        0\n",
+       "Delivery_location_longitude       0\n",
+       "Vehicle_condition                 0\n",
+       "Type_of_vehicle                   0\n",
+       "Type_of_order                     0\n",
+       "Time_taken(min)                   0\n",
+       "City_Code                         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.isnull().sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/9m/gt7ydg4j31g6ty4z57y61xkm0000gn/T/ipykernel_67123/3271350138.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_train['Delivery_person_Ratings'].fillna(df_train['Delivery_person_Ratings'].median(), inplace=True)\n",
+      "/var/folders/9m/gt7ydg4j31g6ty4z57y61xkm0000gn/T/ipykernel_67123/3271350138.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_train['Delivery_person_Age'].fillna(np.random.choice(df_train['Delivery_person_Age']), inplace=True)\n",
+      "/var/folders/9m/gt7ydg4j31g6ty4z57y61xkm0000gn/T/ipykernel_67123/3271350138.py:6: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_train['Weather_Conditions'].fillna(np.random.choice(df_train['Weather_Conditions']), inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Updating null values as seen above\n",
+    "# Delivery_person_Ratings\n",
+    "df_train['Delivery_person_Ratings'].fillna(df_train['Delivery_person_Ratings'].median(), inplace=True)\n",
+    "df_train['Delivery_person_Age'].fillna(np.random.choice(df_train['Delivery_person_Age']), inplace=True)\n",
+    "df_train['Time_Orderd'] = df_train['Time_Orderd'].fillna(df_train['Time_Order_picked'])\n",
+    "df_train['Weather_Conditions'].fillna(np.random.choice(df_train['Weather_Conditions']), inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Columns to update using SimpleImputer\n",
+    "update_cols = ['City_Type', 'Multiple_Deliveries', 'Road_traffic_density', 'Festival']\n",
+    "imputer_freq = SimpleImputer(missing_values=np.nan, strategy='most_frequent')\n",
+    "\n",
+    "for col in update_cols:\n",
+    "    df_train[col] = imputer_freq.fit_transform(df_train[[col]]).ravel()  # Fix column reshaping issue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Delivery_person_Age            0\n",
+       "Delivery_person_Ratings        0\n",
+       "Restaurant_latitude            0\n",
+       "Restaurant_longitude           0\n",
+       "Delivery_location_latitude     0\n",
+       "Delivery_location_longitude    0\n",
+       "Order_Date                     0\n",
+       "Time_Orderd                    0\n",
+       "Time_Order_picked              0\n",
+       "Weather_Conditions             0\n",
+       "Road_traffic_density           0\n",
+       "Vehicle_condition              0\n",
+       "Type_of_order                  0\n",
+       "Type_of_vehicle                0\n",
+       "Multiple_Deliveries            0\n",
+       "Festival                       0\n",
+       "City_Type                      0\n",
+       "Time_taken(min)                0\n",
+       "City_Code                      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_csv(\"../dataset/data_cleaned.csv\")"
    ]
   },
   {
@@ -1592,6 +1973,40 @@
    ],
    "source": [
     "pip install pyarrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.6.1-cp313-cp313-macosx_10_13_x86_64.whl.metadata (31 kB)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in /Users/sachinshinde/miniconda3/envs/PrepVector/lib/python3.13/site-packages (from scikit-learn) (2.2.2)\n",
+      "Collecting scipy>=1.6.0 (from scikit-learn)\n",
+      "  Downloading scipy-1.15.1-cp313-cp313-macosx_10_13_x86_64.whl.metadata (61 kB)\n",
+      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
+      "  Downloading joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
+      "  Downloading threadpoolctl-3.5.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Downloading scikit_learn-1.6.1-cp313-cp313-macosx_10_13_x86_64.whl (12.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.0/12.0 MB\u001b[0m \u001b[31m44.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading joblib-1.4.2-py3-none-any.whl (301 kB)\n",
+      "Downloading scipy-1.15.1-cp313-cp313-macosx_10_13_x86_64.whl (41.4 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.4/41.4 MB\u001b[0m \u001b[31m45.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading threadpoolctl-3.5.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
+      "Successfully installed joblib-1.4.2 scikit-learn-1.6.1 scipy-1.15.1 threadpoolctl-3.5.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install scikit-learn"
    ]
   },
   {
